added changes for optimex

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Grapevine - Index</title>
+  <title>Optimex - Index</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -60,8 +60,8 @@
       <div class="row">
         <div class="col-lg-7 pt-5 pt-lg-0 order-2 order-lg-1 d-flex align-items-center">
           <div data-aos="zoom-out">
-            <h1>Find Your <span>Aha!</span></h1>
-            <h2>Grapevine connects to your data and helps you find the moments that make your users stick around.</h2>
+            <h1>Lightning Fast Queries, on any <span>Warehouse.</span></h1>
+            <h2>Optimex analyzes your usage history and optimizes your warehouse tables to load faster and save you on compute.</h2>
             <div class="text-center text-lg-left">
               <a href="sign_up.html" class="btn-get-started scrollto">Get Started</a>
             </div>
@@ -98,47 +98,47 @@
 
         <div class="row">
           <div class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5" data-aos="fade-left">
-            <h3>Use data in your warehouse to identify activation moments.</h3>
-            <p>Grapevine uses your data and artificial intelligence to help you understand your activation moments - the interaction that fills your users with a feeling of delight and reveals the true value of the product to them.</p>
+            <h3>Use your query history to your advantage</h3>
+            <p>Optimex uses an AI layer to understand what resources you use, and creates dyanmic indexes to give you faster load times.</p>
 
           <div class="icon-box" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon"><i class="bx bx-atom"></i></div>
-            <h4 class="title"><a href="">Gain Insights</a></h4>
-            <p class="description">Understand where in your user journey your customer has the lowest probability to churn.</p>
+            <h4 class="title"><a href="">Faster Queries</a></h4>
+            <p class="description">Optimex learns which tables you query and optimizes your warehouse so those tables load faster.</p>
           </div>
           
           <div class="icon-box" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon"><i class="bx bx-fingerprint"></i></div>
-            <h4 class="title"><a href="">Identify Risky Users</a></h4>
-            <p class="description">Find users that have not hit this threshold yet, and connect to your marketing platforms to create campaigns to get them over the finish line.</p>
+            <h4 class="title"><a href="">Decreased Compute Costs</a></h4>
+            <p class="description">AI that knows your patterns, so you use less compute during peak hours - lessening your bills.</p>
           </div>
 
           <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon"><i class="bx bx-gift"></i></div>
-            <h4 class="title"><a href="">Create Benchmarks</a></h4>
-            <p class="description">Segment your users, and create and monitor goals for customer retention. </p>
+            <h4 class="title"><a href="">Dynamic Indexing</a></h4>
+            <p class="description">As your usage patterns change, Optimex changes your warehouse to fit your needs.</p>
           </div>
           </div>
          </div>
          <div class= "row">
           <div class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5" data-aos="fade-left">
-            <h3> Packed with features designed to get your customer to their trigger moments.</h3>
+            <h3> Packed with features designed to make all of your warehouses lightning fast.</h3>
           </div>
          </div> 
          <div class= "row">
           <div class="col-xl-12 col-lg-6 d-flex justify-content-center py-5 px-lg-5" data-aos="fade-left">
-            <img src="assets/img/feature_image.svg" class="img-fluid animated" alt="">
+            <!-- <img src="assets/img/feature_image.svg" class="img-fluid animated" alt=""> -->
           </div>
          </div>
          
         </div>
-        <script id="chat-forms-widget" type="text/javascript" charset="UTF-8" src="https://chat-forms.com/forms/widget/widget.js?cid=1648316291195-rnp"></script>
+        <script id="chat-forms-widget" type="text/javascript" charset="UTF-8" src="https://chat-forms.com/forms/widget/widget.js?cid=1648349457177-2rb"></script>
       </div>
     </section><!-- End About Section -->
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Grapevine</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Optimex</span></strong>. All Rights Reserved
       </div>
     </div>
   </footer><!-- End Footer -->
