--- a/sign_up.html
+++ b/sign_up.html
@@ -72,7 +72,7 @@
     <section class="inner-page">
       <div class="container">
         <h3>Interested? Give us your email and we'll reach out in a few minutes.</h3>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfVAgXo3_qEUThTxxgIZwYnmRUEic8xvuF8NEbN3G7WS-lHXw/viewform?embedded=true" width="640" height="720" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdq3YGzaUDdZQC0Is81fHA0wBGm9O0AuN4MDzeFFZJuNNwUXg/viewform?embedded=true" width="640" height="677" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
       </div>
     </section>
 
@@ -86,7 +86,7 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="footer-info">
-              <h3>Grapevine</h3>
+              <h3>Optimex/h3>
               <p class="pb-3"><em>Reach out if you want to work with us!</em></p>
               <p>
                 145 W 67th St, New York<br><br>
@@ -110,7 +110,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Grapevine</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Optimex</span></strong>. All Rights Reserved
       </div>
     </div>
   </footer><!-- End Footer -->
