--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
         <div class="row">
           <div class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5" data-aos="fade-left">
-            <h3>Use your query history to your advantage</h3>
+            <h3>Make your queries work for you.</h3>
             <p>Optimex uses an AI layer to understand what resources you use, and creates dyanmic indexes to give you faster load times.</p>
 
           <div class="icon-box" data-aos="zoom-in" data-aos-delay="300">
