confirmed working site

--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
           </div>
           
           <div class="icon-box" data-aos="zoom-in" data-aos-delay="100">
-            <div class="icon"><i class="bx bx-fingerprint"></i></div>
+            <div class="icon"><i class="bx bx-run"></i></div>
             <h4 class="title"><a href="">Decreased Compute Costs</a></h4>
             <p class="description">AI that knows your patterns, so you use less compute during peak hours - lessening your bills.</p>
           </div>
 
           <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
-            <div class="icon"><i class="bx bx-gift"></i></div>
+            <div class="icon"><i class="bx bx-sort-up"></i></div>
             <h4 class="title"><a href="">Dynamic Indexing</a></h4>
             <p class="description">As your usage patterns change, Optimex changes your warehouse to fit your needs.</p>
           </div>
@@ -127,7 +127,7 @@
          </div> 
          <div class= "row">
           <div class="col-xl-12 col-lg-6 d-flex justify-content-center py-5 px-lg-5" data-aos="fade-left">
-            <!-- <img src="assets/img/feature_image.svg" class="img-fluid animated" alt=""> -->
+             <img src="assets/img/big_image.svg" class="img-fluid animated" alt="">
           </div>
          </div>
          
