--- a/sign_up.html
+++ b/sign_up.html
@@ -86,7 +86,7 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="footer-info">
-              <h3>Optimex/h3>
+              <h3>Optimex</h3>
               <p class="pb-3"><em>Reach out if you want to work with us!</em></p>
               <p>
                 145 W 67th St, New York<br><br>
